GitVersion1/objects/Route__c.object
<CustomObject>
    <description>Represents field trip records between various destinations covered by a Sales Rep</description>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Diamond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Customers</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to select the approver for the route from ASM/RSM.</description>
        <label>ASM Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to select the approver for the route from ASM/RSM.</description>
        <label>RSM Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoutesRSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KM__c</fullName>
        <label>KM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Diamond_Customers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Diamond Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Gold_Customers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Gold Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Platinum_Customers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Platinum Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerProfileName__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <label>OwnerProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Route Customers</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RouteAccount__c</fullName>
        <description>Update same name in for route customers records name</description>
        <formula>Related_Route__r.Name+&apos;-&apos;+Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RouteAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteCustUniqueKey__c</fullName>
        <label>RouteCustUniqueKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Territory_Id__c</fullName>
        <externalId>true</externalId>
        <label>Standard Territory Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to stop recursive submission of routes for approval on Update Event.</description>
        <label>Submitted For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terrritory</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Customers_on_Route__c</fullName>
        <formula>Number_Of_Diamond_Customers__c + Number_Of_Platinum_Customers__c + Number_Of_Gold_Customers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total No of Customers on Route</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Towns_Covered__c</fullName>
        <label>Towns Covered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UniqueRouteName__c</fullName>
        <description>This field is populated from Trigger</description>
        <label>UniqueRouteName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueRouteNo__c</fullName>
        <description>This field is populated from Trigger. Combination of Route No. and Territory</description>
        <label>UniqueRouteNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Route_Details</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Route__c.Route</value>
        </filters>
        <label>Route Details</label>
    </listViews>
    <nameField>
        <label>Route No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <recordTypes>
        <fullName>Route</fullName>
        <active>true</active>
        <description>Stores Route Details</description>
        <label>Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>Route_Customer</fullName>
        <active>true</active>
        <description>Stores Route Customer Details</description>
        <label>Route Customer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>New_Route_status_should_be_New_only</fullName>
        <active>true</active>
        <description>New Route records Status should be New only</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Route&quot;, 
ISNEW(), 
TEXT(Status__c) &lt;&gt; &quot;New&quot; 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status can only be New on creation of new Route</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Route_Unique_Name</fullName>
        <active>false</active>
        <description>AND( RecordType.Name ==&apos;Route&apos;,AND(LOWER(VLOOKUP(($ObjectType.Route__c.Fields.Name), ($ObjectType.Route__c.Fields.Name), (Name))) = LOWER(Name), OR(ISNEW(), ISCHANGED(Name)))) ----- Route Number already exists in the system.</description>
        <errorConditionFormula>AND( RecordType.Name ==&apos;Route&apos;,AND(LOWER(VLOOKUP(($ObjectType.Route__c.Fields.Name), ($ObjectType.Route__c.Fields.Name), (Name))) = LOWER(Name), OR(ISNEW(), ISCHANGED(Name))))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Route Number already exists in the system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SP_users_select_only_Submit_for_approval</fullName>
        <active>true</active>
        <description>CPN India SP users should select the Submit for approval in route object records</description>
        <errorConditionFormula>AND(
$RecordType.Name = &quot;Route&quot;,
$Profile.Name = &apos;Sales Professional CPN India&apos;,
ISCHANGED ( Status__c ),
$User.Id = OwnerId,
TEXT(Status__c) &lt;&gt; &quot;Submit for Approval&quot;
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Owner should select &quot;Submit for Approval&quot; option from status field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Number_of_customer_Check</fullName>
        <active>true</active>
        <description>Total No. of Customers should be greater than 0 before Submission of Record for Approval.</description>
        <errorConditionFormula>IF( (ISPICKVAL(Status__c,&apos;Submit for Approval&apos;) &amp;&amp; NOT(ISNEW())) &amp;&amp; Total_No_of_Customers_on_Route__c&lt;1, TRUE, FALSE )</errorConditionFormula>
        <errorMessage>Please add at least One Route Customer before Submitting for Approval.</errorMessage>
    </validationRules>
</CustomObject>